@@ -24,6 +24,12 @@
 #include <bfd.h>
 #undef PACKAGE
 
+#ifdef __APPLE__
+#define plugin_header_sym "_caml_plugin_header"
+#else
+#define plugin_header_sym "caml_plugin_header"
+#endif
+
 int main(int argc, char ** argv)
 {
   bfd *fd;
@@ -74,14 +80,14 @@ int main(int argc, char ** argv)
   sym_count = bfd_canonicalize_dynamic_symtab (fd, symbol_table);
 
   for (i = 0; i < sym_count; i++) {
-    if (strcmp(symbol_table[i]->name, "caml_plugin_header") == 0) {
+    if (strcmp(symbol_table[i]->name, plugin_header_sym) == 0) {
       printf("%ld\n", (long) (offset + symbol_table[i]->value));
       bfd_close(fd);
       return 0;
     }
   }
 
-  fprintf(stderr, "Error: missing symbol caml_plugin_header\n");
+  fprintf(stderr, "Error: missing symbol %s\n", plugin_header_sym);
   bfd_close(fd);
   return 2;
 }
